--- a/1_get_data.qmd
+++ b/1_get_data.qmd
@@ -9,6 +9,10 @@ format: html
 library(here)
 source(here("helper","common.R"))
 source(here("helper","rt_helper.R"))
+
+# min number of trials
+ACC_MIN_TRIAL_CUTOFF <- 4
+RT_MIN_TRIAL_CUTOFF <- 2
 ```
 
 
@@ -149,7 +153,7 @@ d_trial |>
             nas_in_acc_long = mean(is.na(long_window_accuracy)),
             avg_prop_data_short = mean(short_window_prop_data, na.rm=TRUE),
             avg_prop_data_long = mean(long_window_prop_data, na.rm=TRUE),
-            prop_rts = mean(!is.na(rt))) |>
+            prop_rts = mean(!is.na(rt)))  |>
   pivot_longer(everything(), names_to = "variable", values_to = "value") |>
   kable(digits = 2)
 ```
@@ -209,10 +213,36 @@ d_sub <- d_trial |>
   group_by(dataset_name, subject_id, administration_id, age) |>
   summarise(n_trials = sum(!is.na(long_window_accuracy)), 
             n_trials_rt = sum(!is.na(rt)),
+            rt_var = sd(rt, na.rm=TRUE), 
+            log_rt_var = sd(log_rt, na.rm=TRUE), 
+            short_window_acc_var = sd(short_window_accuracy, na.rm=TRUE),
+            long_window_acc_var = sd(long_window_accuracy, na.rm=TRUE),
             across(c(contains("_window"),"rt","log_rt"), ~mean(.x, na.rm=TRUE)))
 ```
 
-Add CDIs.
+
+```{r}
+ggplot(d_sub, aes(x = n_trials, fill = n_trials < 4)) + 
+  geom_histogram(binwidth = 1) + 
+  facet_wrap(~dataset_name, scales = "free_y")
+```
+```{r}
+ggplot(d_sub, aes(x = n_trials_rt, fill = n_trials_rt < 2)) + 
+  geom_histogram(binwidth = 1) + 
+  facet_wrap(~dataset_name, scales = "free_y")
+```
+
+We impose the arbitrary cutoff that we need more than 4 accuracies and more than 2 RTs to analyze a participant.
+
+```{r}
+d_sub <- d_sub |>
+  mutate(across(contains("log_rt"), ~ifelse(n_trials_rt < RT_MIN_TRIAL_CUTOFF, NA, .x)),
+         across(contains("window"), ~ifelse(n_trials < ACC_MIN_TRIAL_CUTOFF, NA, .x)))
+
+```
+
+
+# Add CDI
 
 This is very slightly broken due to some repeated fields. We use `values_fn = mean` to suppress them. 
 
