--- a/2_developmental_analysis.qmd
+++ b/2_developmental_analysis.qmd
@@ -322,9 +322,8 @@ kable(models_sub, digits = 4)
 Within each dataset. 
 
 
-
 ```{r}
-ggplot(d_sub_agevar, aes(x = age, y = short_window_accuracy)) + 
+ggplot(d_sub_agevar, aes(x = age, y = long_window_accuracy)) + 
   geom_point(alpha = .05) + 
   geom_smooth(method = "lm", col = "green", alpha = .5) +
   geom_smooth(method = "loess", alpha = .5) +
@@ -391,8 +390,35 @@ acc_mods_sub_lmer_summary <- map_df(acc_mods_sub_lmer, ~broom.mixed::glance(.x))
 
 kable(acc_mods_sub_lmer_summary, digits = 4)
 ```
+With fixed effects. 
 
-Reaction time models. 
+```{r}
+acc_mods_sub_lmer_fe <- list(lwe_lin = lmer(long_window_elogit ~ age_s  
+                                         + (age_s | dataset_name), data = d_sub),
+                          lwe_log = lmer(long_window_elogit ~ log_age_s 
+                                         + (log_age_s | dataset_name), data = d_sub),
+                          swe_lin = lmer(short_window_elogit ~ age_s 
+                                         + (age_s | dataset_name), data = d_sub),
+                          swe_log = lmer(short_window_elogit ~ log_age_s 
+                                         + (log_age_s | dataset_name), data = d_sub),
+                          lwa_lin = lmer(long_window_accuracy ~ age_s
+                                         + (age_s | dataset_name), data = d_sub),
+                          lwa_log = lmer(long_window_accuracy ~ log_age_s
+                                         + (log_age_s | dataset_name), data = d_sub),
+                          swa_lin = lmer(short_window_accuracy ~ age_s
+                                         + (age_s | dataset_name), data = d_sub),
+                          swa_log = lmer(short_window_accuracy ~ log_age_s
+                                         + (log_age_s | dataset_name), data = d_sub))
+
+acc_mods_sub_lmer_summary_fe <- map_df(acc_mods_sub_lmer_fe, ~broom.mixed::glance(.x)) |>
+  mutate(model = names(acc_mods_sub_lmer_fe), 
+         r2 = map_dbl(acc_mods_sub_lmer_fe, 
+                      ~performance::r2_nakagawa(.x)$R2_conditional))
+
+kable(acc_mods_sub_lmer_summary_fe, digits = 4)
+```
+
+### Reaction time models. 
 
 ```{r}
 rt_mods_lmer <- list(log_log = lmer(log_rt ~ 1 + 
@@ -411,91 +437,25 @@ rt_mods_lmer_summary <- map_df(rt_mods_lmer, ~broom.mixed::glance(.x)) |>
 kable(rt_mods_lmer_summary, digits = 4)
 ```
 
-# Variability
-
 ```{r}
-d_var <- d_trial |>
-  group_by(dataset_name, administration_id, age) |>
-  summarise (`log(RT)` = sd(log_rt, na.rm=TRUE), 
-             `Accuracy` = sd(long_window_accuracy, na.rm=TRUE)) |>
-  pivot_longer(c("log(RT)","Accuracy"), 
-               values_to = "sd", names_to = "measure") 
+rt_mods_lmer_fe <- list(log_log = lmer(log_rt ~ log_age_s + 
+                                      (log_age_s | dataset_name), data = d_sub),
+                     log_lin = lmer(log_rt ~ age_s + 
+                                      (age_s | dataset_name), data = d_sub),
+                     lin_log = lmer(rt ~ log_age_s + 
+                                      (log_age_s | dataset_name), data = d_sub),
+                     lin_lin = lmer(rt ~ age_s + 
+                                      (age_s | dataset_name), data = d_sub))
 
+rt_mods_lmer_summary_fe <- map_df(rt_mods_lmer_fe, ~broom.mixed::glance(.x)) |>
+  mutate(model = names(rt_mods_lmer_fe), 
+         r2 = map_dbl(rt_mods_lmer_fe, ~performance::r2_nakagawa(.x)$R2_conditional))
 
-v <- ggplot(d_var, aes(x = age, y = sd)) + 
-  geom_point(alpha = .05) + 
-  geom_smooth() +
-  geom_smooth(method = "lm", col = "green") +
-  geom_smooth(data = d_var |>
-  filter(dataset_name %in% datasets_with_age_variation$dataset_name),
-              aes(group = dataset_name, col = dataset_name), geom="line",
-              alpha = .1, method = "lm", size = .5, lty = 2) + 
-  scale_color_discrete(guide = FALSE) + 
-  scale_x_log10() +
-  facet_wrap(~measure, scales = "free_y") + 
-  ylab("Standard Deviation") + 
-  xlab("Age (months)")
-
-v 
-ggsave(v, filename = "figures/var.png", width = 8, height = 3.5)
-
-```
-# Pub stuff
-
-stats
-
-```{r}
-d_sub |>
-  group_by(dataset_name) |>
-  summarise(`N subjects` = length(unique(subject_id)),
-            `N admins` = n(), 
-            `Mean Age` = mean(age), 
-            `Min Age` = min(age), 
-            `Max Age` = max(age), 
-            `Avg Trials` = mean(n_trials),
-            `Avg RT Trials` = mean(n_trials_rt),
-            `CDIs` = ifelse(!is.na(any(prod)), "x", ""), 
-            `longitudinal` = ifelse(any(duplicated(subject_id)), "x", "")) |>
-  arrange(desc(`N subjects`)) |>
-  xtable(caption = "Characteristics of included datasets from Peekbank. `Admins` denotes separate experimental sessions.")
+kable(rt_mods_lmer_summary_fe, digits = 4)
 ```
 
 
 
-```{r}
-a <- ggplot(d_sub_long |> filter(measure == "long_window_accuracy"), 
-       aes(x = age, y = accuracy)) + 
-  geom_point(alpha = .05) + 
-  geom_smooth() +
-  geom_smooth(method = "lm", col = "green") +
-  geom_smooth(data = d_sub_agevar_long |> filter(measure == "long_window_accuracy"),
-              aes(group = dataset_name, col = dataset_name), geom="line",
-              alpha = .1, method = "lm", size = .5, lty = 2) + 
-  geom_hline(yintercept = .5, lty = 2) + 
-  scale_x_log10() +
-  scale_color_discrete(guide = FALSE) + 
-  ylab("Accuracy") + 
-  xlab("Age (months)")
-
-b <- ggplot(d_sub_long_rt |> filter(measure == "log_rt"), 
-       aes(x = age, y = rt)) + 
-  geom_point(alpha = .05) + 
-  geom_smooth() +
-  geom_smooth(method = "lm", col = "green") +
-  geom_smooth(data = d_sub_agevar_long_rt |> filter(measure == "log_rt"),
-              aes(group = dataset_name, col = dataset_name), geom="line",
-              alpha = .1, method = "lm", size = .5, lty = 2) + 
-  # geom_hline(yintercept = .5, lty = 2) + 
-  scale_x_log10() +
-  scale_color_discrete(guide = FALSE) + 
-  theme(legend.position = "bottom") + 
-  ylab("Reaction Time (log)") + 
-  xlab("Age (months)")
-
-f <- cowplot::plot_grid(a,b)
-ggsave(f, filename = "figures/acc_rt.png", width = 8, height = 3.5)
-
-```
 
 
 
