--- a/3_developmental_relationships.qmd
+++ b/3_developmental_relationships.qmd
@@ -6,7 +6,6 @@ format: html
 ```{r}
 AGEVAR_CUTOFF <- 6
 
-
 suppressPackageStartupMessages(library(here))
 suppressPackageStartupMessages(library(psych))
 suppressPackageStartupMessages(source(here("helper","common.R")))
@@ -23,9 +22,8 @@ d_trial <- readRDS(here("cached_intermediates","1_d_trial.Rds"))
 ## Between datasets
 
 ```{r}
-cor(select(d_sub, age, log_age, rt, log_rt, 
-           short_window_accuracy, long_window_accuracy, 
-           short_window_elogit, long_window_elogit, prod, comp), 
+cor(select(d_sub, log_age, rt, 
+           long_window_accuracy, long_window_elogit, prod, comp), 
     use = "pairwise.complete.obs") |>
   round(2)
 ```
@@ -33,23 +31,9 @@ cor(select(d_sub, age, log_age, rt, log_rt,
 Take a look at correlations to select variables. 
 
 ```{r}
-GGally::ggpairs(select(d_sub, age, log_age, rt, log_rt, 
-                       short_window_accuracy, long_window_accuracy, 
-                       short_window_elogit, long_window_elogit, prod, comp), 
+GGally::ggpairs(select(d_sub, log_age, rt, 
+           long_window_accuracy, long_window_elogit, prod, comp), 
                 progress = FALSE, lower = list(continuous = GGally::wrap("points", alpha = 0.03)))
-
-```
-
-Let's select the most interesting of these. 
-
-```{r, fig.width=9, fig.height=9}
-d_sub |>
-  select(log_age, log_rt,  
-         long_window_accuracy,  prod, comp) |>
-  GGally::ggpairs(progress = FALSE, 
-                  lower = list(continuous = GGally::wrap("points", alpha = 0.03)),
-                  axisLabels = "show") 
-
 
 ```
 
@@ -57,8 +41,8 @@ d_sub |>
 
 ```{r}
 d_residualized_by_age <- d_sub |>
-  select(subject_id, administration_id,log_age,log_rt, long_window_accuracy, prod, comp) |> 
-  pivot_longer(cols=c(log_rt,long_window_accuracy,  prod, comp),names_to="measure",values_to="value") |>
+  select(subject_id, administration_id, log_age, rt, long_window_accuracy, prod, comp) |> 
+  pivot_longer(cols=c(rt, long_window_accuracy,  prod, comp),names_to="measure",values_to="value") |>
   group_by(measure) |> 
   nest() |> 
   mutate(fits = map(data, \(d) lm(value ~ log_age, data = d) |>
@@ -300,406 +284,5 @@ ggplot(filter(d_sub,
   ylab("Accuracy (long window)")
 
 ```
-
-# Dimensionality reduction
-
-The claim of some of the Fernald processing corpus is that there is a second principal component here (namely, processing speed) that is meaningful and relates to later learning outcomes.
-
-## All data
-
-
-Scree plot
-
-```{r}
-d_sub_mat <- d_sub |>
-  ungroup() |>
-  select(log_age, rt, long_window_accuracy) 
-
-d_sub_mat <- d_sub_mat |>
-  filter(complete.cases(d_sub_mat)) |>
-  as.matrix() 
-
-fa.parallel(d_sub_mat)
-```
-
-
-Now with variance too. 
-
-
-```{r}
-d_sub_mat <- d_sub |>
-  ungroup() |>
-  select(log_age, rt, long_window_accuracy, long_window_acc_var, rt_var) 
-
-d_sub_mat <- d_sub_mat |>
-  filter(complete.cases(d_sub_mat)) |>
-  as.matrix() 
-
-fa.parallel(d_sub_mat)
-```
-
-
-```{r}
-mod1 <- fa(d_sub_mat, 1, rotate = "varimax")
-mod1
-```
-
-
-
-
-## Production
-
-
-Scree plot
-
-```{r}
-d_sub_mat <- d_sub |>
-  ungroup() |>
-  select(log_age, log_rt, long_window_elogit, prod) 
-
-d_sub_mat <- d_sub_mat |>
-  filter(complete.cases(d_sub_mat)) |>
-  as.matrix() 
-
-fa.parallel(d_sub_mat)
-```
-
-Factor analysis first. This is probably more appropriate. 
-
-```{r}
-mod1 <- fa(d_sub_mat, 1, rotate = "varimax")
-mod2 <- fa(d_sub_mat, 2, rotate = "varimax")
-
-summary(mod1)
-mod1
-```
-
-Make into matrices and look at PCA. 
-
-```{r}
-
-acc_rt_prc <- prcomp(x = d_sub_mat, scale = TRUE)
-
-acc_rt_prc
-summary(acc_rt_prc)
-ggbiplot::ggbiplot(acc_rt_prc, alpha = .1)
-```
-
-
-## Production within individual datasets
-
-
-```{r}
-d_sub_mat_dataset <- d_sub |>
-  filter(dataset_name %in% datasets_with_age_variation$dataset_name) |>
-  group_by(dataset_name) |>
-  select(dataset_name, log_age, log_rt, long_window_elogit, prod) 
-
-d_sub_mat_grp <- d_sub_mat_dataset |>
-  nest() |>
-  mutate(complete_data = map(data, ~filter(.x[complete.cases(.x),])),
-         mat = as.matrix(complete_data), 
-         has_data = map_lgl(complete_data, ~nrow(.x)>0)) |>
-  filter(has_data) |>
-  mutate(fas = map(mat, ~fa(.x, 1, rotate = "varimax")), 
-         f_summary = map(fas, summary), 
-         loadings = map(fas, ~tibble(loadings = as.double(loadings(.x)), 
-                                     name = rownames(loadings(.x)))))
-
-
-ls <- d_sub_mat_grp |>
-  select(dataset_name, loadings) |>
-  unnest(cols = c(loadings))
-
-ggplot(ls, aes(x = name, y = loadings, col = dataset_name)) + 
-  geom_point(aes = .5) +
-  stat_summary(fun.data = "mean_cl_boot", aes(group = 1)) +
-  geom_hline(yintercept = 0, lty = 2) + 
-  coord_flip()
-
-```
-
-
-
-## Comprehension
-
-
-```{r}
-d_sub_mat_comp <- d_sub |>
-  ungroup() |>
-  select(log_age, log_rt,  long_window_elogit, comp) 
-
-d_sub_mat_comp <- d_sub_mat_comp |>
-  filter(complete.cases(d_sub_mat_comp)) |>
-  as.matrix() 
-
-```
-
-Scree.
-
-```{r}
-fa.parallel(d_sub_mat_comp)
-```
-
-Factor analysis
-
-```{r}
-mod1_comp <- fa(d_sub_mat_comp, 1, rotate = "varimax")
-mod2_comp <- fa(d_sub_mat_comp, 2, rotate = "varimax")
-
-summary(mod1_comp)
-loadings(mod1_comp)
-```
-
-PCA.
-
-```{r}
-acc_rt_prc_comp <- prcomp(x = d_sub_mat_comp, scale = TRUE)
-
-acc_rt_prc_comp
-summary(acc_rt_prc_comp)
-ggbiplot::ggbiplot(acc_rt_prc_comp, alpha = .1)
-```
-
-# CFA models
-
-```{r}
-
-d_cfa <- d_sub |>
-  rename(`accuracy` = long_window_accuracy) |>
-  mutate(accuracy = scale(accuracy), 
-         log_age = scale(log_age), 
-         rt = scale(rt)) |>
-  select(accuracy, log_age, rt) 
-
-d_cfa <- d_cfa[complete.cases(d_cfa), ]
-
-fa_model <-  "F1  =~ log_age + rt + accuracy"
-fit <- cfa(fa_model, d_cfa, std.lv=TRUE)
-
-summary(fit)
-graph_sem(model = fit)+ theme(panel.background = element_rect(fill = "white"))
-```
-Production. 
-
-```{r}
-d_cfa_prod <- d_sub |>
-  rename(`accuracy` = long_window_accuracy) |>
-  mutate(accuracy = scale(accuracy), 
-         log_age = scale(log_age), 
-         log_rt = scale(log_rt), 
-         prod = scale(prod)) |>
-  select(accuracy, log_age, log_rt, prod) 
-
-d_cfa_prod <- d_cfa_prod[complete.cases(d_cfa_prod), ]
-
-fa_model_prod <-  "F1  =~ log_age + log_rt + accuracy + prod"
-fit_prod <- cfa(fa_model_prod, d_cfa_prod, std.lv=TRUE)
-
-summary(fit_prod)
-b <- graph_sem(model = fit_prod) + 
-  theme(panel.background = element_rect(fill = "white"))
-b
-```
-
-Comprehension.
-
-```{r}
-d_cfa_comp <- d_sub |>
-  rename(`accuracy` = long_window_accuracy) |>
-  mutate(accuracy = scale(accuracy), 
-         log_age = scale(log_age), 
-         log_rt = scale(log_rt), 
-         comp = scale(comp)) |>
-  select(accuracy, log_age, log_rt, comp) 
-
-d_cfa_comp <- d_cfa_comp[complete.cases(d_cfa_comp), ]
-
-fa_model_comp <-  "F1  =~ log_age + log_rt + accuracy + comp"
-fit_comp <- cfa(fa_model_comp, d_cfa_comp, std.lv=TRUE)
-
-summary(fit_comp)
-c <- graph_sem(model = fit_comp,
-               layout = get_layout(x = fit_comp, layout_algorithm = "layout_as_star")) + 
-  theme(panel.background = element_rect(fill = "white"))
-c
-```
-
-Plot these as a grid. 
-
-```{r}
-plot_grid(a,b,c, nrow = 1, labels = c("A","B","C"))
-ggsave(here("figures","sem.png"), width = 25, height = 4)
-```
-
-## Within dataset
-
-
-```{r}
-
-d_cfa_dataset <- d_cfa |>
-  filter(dataset_name %in% datasets_with_age_variation$dataset_name) |>
-  group_by(dataset_name) |>
-  nest() |>
-  mutate(complete_data = map(data, ~filter(.x[complete.cases(.x),])),
-         mat = as.matrix(complete_data), 
-         has_data = map_lgl(complete_data, ~nrow(.x)>0)) |>
-  filter(has_data) |>
-  mutate(fa = map(mat, ~cfa(fa_model, .x, std.lv=TRUE)), 
-         loadings = map(fa, ~summary(.x)[[5]]))
-
-d_loadings <- d_cfa_dataset |>
-  select(dataset_name, loadings) |>
-  unnest(cols = c(loadings)) |>
-  filter(!is.na(se))
-
-ggplot(filter(d_loadings, lhs == "F1", rhs != "F1"),
-       aes(x = rhs, y = est, col = dataset_name)) + 
-  geom_point(alpha = .5) +
-  stat_summary(fun.data = "mean_cl_boot", aes(group = 1)) +
-  geom_hline(yintercept = 0, lty = 2) + 
-  coord_flip()+ 
-  ylab("Standardized loading") + 
-  xlab("Predictor") +
-  scale_color_discrete(name = "Dataset")
-```
-With production data. 
-
-```{r}
-fa_model_prod <-  "F1  =~ log_age + rt + accuracy + prod"
-
-d_cfa_dataset_prod <-  d_sub |>
-  rename(`accuracy` = long_window_accuracy) |>
-  mutate(accuracy = scale(accuracy), 
-         log_age = scale(log_age), 
-         rt = scale(rt), 
-         prod = scale(prod)) |>
-  select(dataset_name, accuracy, log_age, rt, prod) |>
-  filter(dataset_name %in% datasets_with_age_variation$dataset_name) |>
-  group_by(dataset_name) |>
-  nest() |>
-  mutate(complete_data = map(data, ~filter(.x[complete.cases(.x),])),
-         mat = as.matrix(complete_data), 
-         has_data = map_lgl(complete_data, ~nrow(.x)>0)) |>
-  filter(has_data) |>
-  mutate(fa = map(mat, ~cfa(fa_model_prod, .x, std.lv=TRUE)), 
-         loadings = map(fa, ~summary(.x)[[5]]))
-
-d_loadings_prod <- d_cfa_dataset_prod |>
-  select(dataset_name, loadings) |>
-  unnest(cols = c(loadings)) |>
-  filter(!is.na(se))
-
-ggplot(filter(d_loadings_prod, lhs == "F1", rhs != "F1"),
-       aes(x = rhs, y = est, col = dataset_name)) + 
-  geom_point(alpha = .5) +
-  stat_summary(fun.data = "mean_cl_boot", aes(group = 1)) +
-  geom_hline(yintercept = 0, lty = 2) + 
-  coord_flip()+ 
-  ylab("Standardized loading") + 
-  xlab("Predictor") +
-  scale_color_discrete(name = "Dataset")
-```
-## Measurement invariance across age? 
-
-This doesn't work. 
-
-```{r}
-d_cfa_younger <- d_sub |>
-    filter(age < median(age)) |>
-  rename(`accuracy` = long_window_accuracy) |>
-  mutate(accuracy = scale(accuracy), 
-         log_age = scale(log_age), 
-         log_rt = scale(log_rt)) |>
-  select(accuracy, log_age, log_rt) 
-d_cfa_younger <- d_cfa_younger[complete.cases(d_cfa_younger), ]
-
-
-d_cfa_older <- d_sub |>
-  filter(age >= median(age)) |>
-  rename(`accuracy` = long_window_accuracy) |>
-  mutate(accuracy = scale(accuracy), 
-         log_age = scale(log_age), 
-         log_rt = scale(log_rt)) |>
-  select(accuracy, log_age, log_rt) 
-d_cfa_older <- d_cfa_older[complete.cases(d_cfa_older), ]
-
-fit_younger <- cfa(fa_model, 
-                   data = d_cfa_younger,
-                   std.lv=TRUE)
-fit_older <- cfa(fa_model, 
-                 data = d_cfa_older,
-                 std.lv=TRUE)
-
-younger_plot <- graph_sem(model = fit_younger)
-older_plot <- graph_sem(model = fit_older)
-plot_grid(younger_plot, older_plot)
-```
-
-
-# Longitudinal data
-
-```{r}
-longitudinal <- d_sub |>
-  group_by(dataset_name, subject_id) |>
-  count() |>
-  filter(n > 1)
-
-d_sub_long <- d_sub |>
-  filter(subject_id %in% longitudinal$subject_id) |>
-  group_by(subject_id) |>
-  arrange(administration_id) |>
-  mutate(admin_num = 1:n(), 
-         delta_t = c(0,diff(age)))
-
-ggplot(d_sub_long, 
-       aes(x = delta_t, fill = as.factor(admin_num))) +
-  geom_histogram() + 
-  facet_wrap(~dataset_name)
-```
-
-Longitudinal data with CDI is just FMW2013 right now. 
-
-```{r}
-fmw <- filter(d_sub_long, dataset_name == "fmw_2013") |>
-  mutate(t = ifelse(age < 23, "t1","t2")) |>
-  group_by(subject_id, t) |>
-  summarise(age = mean(age), 
-            log_rt = mean(log_rt), 
-            prod = mean(prod), 
-            long_window_accuracy = mean(long_window_accuracy),
-            delta_t = mean(delta_t)) |>
-  pivot_wider(names_from = "t", 
-              values_from = c("age","log_rt","prod","long_window_accuracy", "delta_t"))
-
-summary(lm(prod_t2 ~ long_window_accuracy_t1 * log_rt_t1 + age_t2, 
-           data = fmw))
-```
-
-## Without CDIs
-
-```{r}
-ggplot(d_sub_long, 
-       aes(x = age, y = long_window_accuracy, group = subject_id, col = dataset_name)) +
-  geom_line(alpha = .3, position = position_jitter(width = .1, height = 0)) + 
-  geom_smooth(aes(group = 1)) + 
-  scale_y_log10() + 
-  geom_hline(lty = 2, yintercept = .5)
-
-```
-
-```{r}
-ggplot(filter(d_sub_long, n_trials_rt > 3),
-       aes(x = age, y = log_rt, group = subject_id, col = dataset_name)) +
-  geom_line(alpha = .3, position = position_jitter(width = .1, height = 0)) + 
-  geom_smooth(aes(group = 1)) + 
-  scale_y_log10() 
-```
-
-## Model comparison of growth forms within kids
-
-
-
-# Conclusions
 
 
